--- a/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_user_posts.yml
+++ b/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_user_posts.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://lit-atoll-80185.herokuapp.com/api/v1/profiles/10000001/post
+    uri: http://localhost:3001/api/v1/profiles/10000001/post
     body:
       encoding: US-ASCII
       string: ''
@@ -18,12 +18,6 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Server:
-      - Cowboy
-      Date:
-      - Sat, 17 Apr 2021 23:37:39 GMT
-      Connection:
-      - keep-alive
       Content-Type:
       - application/json; charset=utf-8
       Etag:
@@ -31,18 +25,56 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - d7eb0413-2e1f-4343-896a-e2a1c672f70a
+      - 6a92a43a-06ad-4912-bb1c-9cdddbce29b7
       X-Runtime:
-      - '0.030345'
+      - '0.003916'
       Transfer-Encoding:
       - chunked
-      Via:
-      - 1.1 vegur
     body:
       encoding: UTF-8
       string: '{"data":[{"id":"1","type":"post","attributes":{"content":"hey did you
         see that lil nas X video?","link":"photoURL.com","user_id":10000001}},{"id":"2","type":"post","attributes":{"content":"hey
         did you see that create meme?","link":"photoURL.com","user_id":10000001}},{"id":"3","type":"post","attributes":{"content":"hey
         did you see that riot footage?","link":null,"user_id":10000001}}]}'
-  recorded_at: Sat, 17 Apr 2021 23:37:39 GMT
+  recorded_at: Sun, 18 Apr 2021 16:30:11 GMT
+- request:
+    method: get
+    uri: https://lit-atoll-80185.herokuapp.com/api/v1/profiles/10000001/post
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v1.3.0
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 400
+      message: Bad Request
+    headers:
+      Server:
+      - Cowboy
+      Date:
+      - Sun, 18 Apr 2021 17:08:34 GMT
+      Connection:
+      - keep-alive
+      Content-Type:
+      - application/json; charset=utf-8
+      Cache-Control:
+      - no-cache
+      X-Request-Id:
+      - cac404de-8883-4382-8202-718a8ea3db12
+      X-Runtime:
+      - '0.008028'
+      Transfer-Encoding:
+      - chunked
+      Via:
+      - 1.1 vegur
+    body:
+      encoding: UTF-8
+      string: '{"data":{},"error":"invalid parameters"}'
+  recorded_at: Sun, 18 Apr 2021 17:08:34 GMT
 recorded_with: VCR 6.0.0
